# c-engine

./: CMakeLists.txt  README.md  common.h  core.h  main.c  main.cpp
core/: core_window.c  core_window.h  core_world.c  core_world.h
io/: io_load_texture.c  io_load_texture.h
utils/: utils_array.c  utils_array.h  utils_vector.c  utils_vector.h
